--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -18,7 +18,7 @@ jobs:
             - name: Build and Deploy
               uses: JacksonMaxfield/github-pages-deploy-action-python@master
               env:
-                  ACCESS_TOKEN: ${{ secrets.ORTHOGONALFUNCTIONS_DOCS_WORKFLOW }}
+                  ACCESS_TOKEN: ${{ secrets.TRACEINV_DOCS }}
                   BASE_BRANCH: master
                   BRANCH: gh-pages
                   FOLDER: docs/_build/html
