--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -17,8 +17,7 @@ jobs:
 
             - name: Install Prerequisit
               run: |
-                  apt install sudo
-                  sudo apt install libsuitesparse-dev
+                  apt install libsuitesparse-dev
 
             - name: Build and Deploy
               uses: JacksonMaxfield/github-pages-deploy-action-python@master
