--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ matrix:
             - python -m pip install --upgrade pip
             - python -m pip install --upgrade pytest-cov
             - python -m pip install codecov
-            - brew install suite-sparse 
+            - sudo brew install suite-sparse 
           install:
             - python -m pip install -r requirements.txt
             - python -m pip install -e .
@@ -68,7 +68,7 @@ matrix:
             - python3 -m pip install --upgrade pytest-cov
             - python3 -m pip install codecov
           install:
-            - brew install suite-sparse 
+            - sudo brew install suite-sparse 
             - python3 -m pip install -r requirements.txt
             - python3 -m pip install -e .
           script:
