--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -19,6 +19,7 @@ jobs:
               run: |
                   sudo apt-get update
                   sudo apt-get install libsuitesparse-dev
+                  sudo apt-get install libcholmod3
 
             - name: Build and Deploy
               uses: JacksonMaxfield/github-pages-deploy-action-python@master
@@ -29,8 +30,6 @@ jobs:
                   FOLDER: docs/_build/html
                   BUILD_SCRIPT: |
                       python -m pip install --upgrade pip
-                      python -m pip install --upgrade numpy
-                      python -m pip install --upgrade sphinx
                       python -m pip install --upgrade .[docs]
                       sphinx-apidoc -f -o docs/_modules/ ./TraceInv
                       make -C docs/ html
