--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -17,8 +17,8 @@ jobs:
 
             - name: Install Prerequisit
               run: |
-                  python -m pip install --upgrade pip
-                  python -m pip install --upgrade sphinx
+                  sudo python -m pip install --upgrade pip
+                  sudo python -m pip install --upgrade sphinx
 
             - name: Build and Deploy
               uses: JacksonMaxfield/github-pages-deploy-action-python@master
