--- a/.travis.yml
+++ b/.travis.yml
@@ -50,8 +50,10 @@ matrix:
             - python -m pip install --upgrade pip
             - python -m pip install --upgrade pytest-cov
             - python -m pip install codecov
+            - brew install suite-sparse
+            - brew install libbiosig
           install:
-            - python -m pip install --upgrade -r requirements-lite.txt
+            - python -m pip install --upgrade -r requirements.txt
             - python -m pip install -e .
 
         - name: 'macOSX with Python: 3.7'
@@ -66,8 +68,10 @@ matrix:
             - python3 -m pip install --upgrade pip
             - python3 -m pip install --upgrade pytest-cov
             - python3 -m pip install codecov
+            - brew install suite-sparse
+            - brew install libbiosig
           install:
-            - python3 -m pip install --upgrade -r requirements-lite.txt
+            - python3 -m pip install --upgrade -r requirements.txt
             - python3 -m pip install -e .
           script:
             - python3 -m pytest --cov-report=xml --cov=tests/
@@ -82,7 +86,7 @@ matrix:
             - python -m pip install --upgrade pytest-cov
             - python -m pip install codecov
           install:
-            - python -m pip install --upgrade -r requirements-lite.txt
+            - python -m pip install --upgrade -r requirements.txt
             - python -m pip install -e .
           env:
             - PATH=/c/Python38:/c/Python38/Scripts:$PATH
