--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ matrix:
             - python -m pip install --upgrade pytest-cov
             - python -m pip install codecov
             - brew install suite-sparse
-            - brew install libbiosig
+            - brew install libbiosig-dev
           install:
             - python -m pip install --upgrade -r requirements.txt
             - python -m pip install -e .
@@ -69,7 +69,7 @@ matrix:
             - python3 -m pip install --upgrade pytest-cov
             - python3 -m pip install codecov
             - brew install suite-sparse
-            - brew install libbiosig
+            - brew install libbiosig-dev
           install:
             - python3 -m pip install --upgrade -r requirements.txt
             - python3 -m pip install -e .
