--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -17,8 +17,10 @@ jobs:
 
             - name: Install Prerequisit
               run: |
-                  python -m pip install --upgrade pip
-                  python -m pip install --upgrade sphinx
+                  python3 -m pip install --upgrade pip
+                  python3 -m pip install --upgrade sphinx
+                  which sphinx
+                  which sphinx-apidoc
 
             - name: Build and Deploy
               uses: JacksonMaxfield/github-pages-deploy-action-python@master
@@ -29,6 +31,7 @@ jobs:
                   FOLDER: docs/_build/html
                   BUILD_SCRIPT: |
                       export PATH=${PATH}:/home/runner/.local/bin
+                      ls /home/runner/.local/bin
                       sphinx-apidoc -f -o docs/_modules/ ./TraceInv
                       make -C docs/ html
                       touch docs/_build/html/.nojekyll
