--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,6 @@ matrix:
             - python -m pip install --upgrade pip
             - python -m pip install --upgrade pytest-cov
             - python -m pip install codecov
-            - brew install suite-sparse
           install:
             - python -m pip install -e .[extra]
 
@@ -68,10 +67,11 @@ matrix:
             - python3 -m pip install --upgrade pip
             - python3 -m pip install --upgrade pytest-cov
             - python3 -m pip install codecov
-            - brew install suite-sparse
           install:
+            - python3 --version
             - python3 -m pip install -e .
           script:
+            - python3 --version
             - python3 -m pytest --cov-report=xml --cov=tests/
 
         - name: "Windows with Python: 3.8"
