added graphvix in setup.py

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -23,7 +23,7 @@ jobs:
                   BRANCH: gh-pages
                   FOLDER: docs/_build/html
                   BUILD_SCRIPT: |
-                      apt install graphviz
+                      apt install graphviz -y
                       pip install --upgrade pip
                       pip install .[docs]
                       export PATH=$HOME/.local/bin:$PATH
