--- a/.travis.yml
+++ b/.travis.yml
@@ -92,7 +92,7 @@ matrix:
         #     - python -m pip install --upgrade pip
         #   install:
         #     - python -m pip install -r requirements.txt
-        #     - python -m pip install -e .[dev]
+        #     - python -m pip install -e .[test]
         #     - python -m pip install -e .[docs]
         #   script:
         #     - python -m pytest --cov-report=xml --cov=tests/
