--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
               run: |
                   python --version
                   python -m pip install --upgrade pip
+                  python -m pip install --upgrade numpy
                   python -m pip install --upgrade -e .[full]
             - name: Test
               run: |
