--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -8,7 +8,7 @@ on:
 jobs:
     build:
 
-        runs-on: ubuntu-latest
+        runs-on: windows-latest
         strategy:
             matrix:
                 python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
@@ -19,15 +19,11 @@ jobs:
               uses: actions/setup-python@v2
               with:
                   python-version: ${{ matrix.python-version }}
-            - name: Install prerequisits
-              run: |
-                  sudo apt-get update
-                  sudo apt-get install libsuitesparse-dev
             - name: Install package and dependencies
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
-                  python -m pip install --upgrade -e .[full]
+                  python -m pip install --upgrade -e .[extra]
             - name: Test
               run: |
                   python -m pip install --upgrade pytest
