--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
-graft docs/images
-global-exclude *.py[cod] __pycache__ *.so
+global-include *.pyx
+global-include *.pxd
+global-exclude *.py[cod] __pycache__
 
 include CHANGELOG.rst
 include README.rst
