--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,7 @@
 [aliases]
 test=pytest
+
+# Choose either build-lib (equivalent to --build-lib=lib) or inplace=1 (equivalent to --inplace) below
+# [build_ext]
+# build-lib=lib
+# inplace=1
