--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -26,7 +26,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
-                  python -m pip install --upgrade -e .[full]
+                  python -m pip install --upgrade .[full]
             - name: Test
               run: |
                   python -m pip install --upgrade pytest
