--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -23,7 +23,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
-                  python -m pip install --upgrade -e .
+                  python -m pip install --upgrade .
             - name: Test
               run: |
                   python -m pip install --upgrade pytest
