added pytest for all builds

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [aliases]
 test=pytest
 
+[tool:pytest]
+addopts = --cov=tests/
+
 # Choose either build-lib (equivalent to --build-lib=lib) or inplace=1 (equivalent to --inplace) below
 # [build_ext]
 # build-lib=lib
