--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -32,7 +32,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pytest
                   python -m pip install --upgrade pytest-cov
-                  python setup.py pytest --addopts "--cov-report=xml --cov=tests/"
+                  python setup.py test 
             - name: Coverage
               run: |
                   python -m pip install codecov
