--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -31,7 +31,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pytest
                   python -m pip install --upgrade pytest-cov
-                  python -m pytest --cov-report=xml --cov=tests/
+                  python setup.py test 
             - name: Coverage
               run: |
                   python -m pip install codecov
