--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -29,7 +29,7 @@ jobs:
                   python -m pip install --upgrade numpy
                   python -m pip install --upgrade .[full]
               env:
-                  CC=gcc
+                  CC: gcc
             - name: Test
               run: |
                   python -m pip install --upgrade pytest
