--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -22,7 +22,7 @@ jobs:
             - name: Install prerequisits
               run: |
                   brew install suite-sparse
-                  brew install llvm
+                  brew install libomp
             - name: Install package and dependencies
               run: |
                   python -m pip install --upgrade pip
