--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -19,6 +19,7 @@ requirements:
     host:
         - python {{ python }}
         - setuptools
+        - cython
         - pip
         - pytest-runner
     run:
