--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -8,7 +8,7 @@ on:
 jobs:
     build-and-deploy:
         runs-on: ubuntu-latest
-        name: Publish python distribution to PyPi
+        name: Publish to PyPi
         steps:
             - name: Setup python
               uses: actions/setup-python@v1
