--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -10,6 +10,7 @@ on:
 jobs:
     publish:
         runs-on: ubuntu-latest
+        name: Publish to Conda
         steps:
             - uses: actions/checkout@v2
             - name: publish-to-conda
