--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -15,20 +15,20 @@ jobs:
               with:
                   python-version: 3.8
 
-            - name: Install twine and wheel
+            - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade twine
                   python -m pip install --upgrade wheel
 
             - name: Checkout
-              uses: actions/checkout@master
+              uses: actions/checkout@v2
 
-            - name: Build distribution
-              run: |
-                  python setup.py sdist
-                  python setup.py bdist_wheel
-                  twine check dist/*
+            - name: Build manylinux Python wheels
+              uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_x86_64
+              with:
+                python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38m'
+                build-requirements: 'cython numpy'
 
             - name: Publish to PyPi
               uses: pypa/gh-action-pypi-publish@master
