--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ __pycache__/
 
 # C extentions
 *.so
+*.o
 
 # Distribution
 bin/
@@ -24,6 +25,7 @@ develop-eggs/
 dist/
 eggs/
 sdist/
+tmp/
 .eggs/
 *.egg-info/
 .installed.cfg
