--- a/setup.cfg
+++ b/setup.cfg
@@ -8,3 +8,12 @@ addopts = --cov=tests/
 # [build_ext]
 # build-lib=lib
 # inplace=1
+
+[check-manifest]
+ignore =
+    .travis.yml
+    docs/_build
+    docs/_build/*
+    notebooks/.ipynb_checkpoints
+    notebooks/.ipynb_checkpoints/*
+    ToDo.txt
