--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -3,7 +3,7 @@ name: deploy-conda
 on:
     push:
         branches:
-            - master
+            - main
     release:
         types: [published]
     
