--- a/.travis.yml
+++ b/.travis.yml
@@ -108,7 +108,7 @@ matrix:
         #         local_dir: ./docs/_build/html
         #         keep_history: true
         #         on:
-        #             branch: master
+        #             branch: main
 
 # These only apply to the above jobs that before_install is not declared for them in the above.
 before_install:
