--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,16 @@
 [tox]
+basepython=python3
 ; envlist = py38
 
 [testenv]
+basepython=python3
 deps = 
     cython
     pytest 
 commands = python setup.py test
 
 [testenv:docs]
-changedir = docs
+basepython=python3
 deps =
     cython
     sphinx
@@ -17,7 +19,6 @@ deps =
     sphinx_rtd_theme
     graphviz
     sphinx-automodapi
-    sphinxcontrib-apidoc
 commands =
     sphinx-apidoc -f -o _modules ../TraceInv
-    make html
+    python setup.py build_sphinx
