--- a/.github/workflows/check-manifest.yml
+++ b/.github/workflows/check-manifest.yml
@@ -11,13 +11,20 @@ jobs:
     check:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-python@v2
+            - name: Checkout
+              uses: actions/checkout@v2
+
+            - name: Setup Python
+              uses: actions/setup-python@v2
               with:
                   python-version: '3.9'
+
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
-                  pip install check-manifest cython
-            - run: |
+                  pip install cython
+                  pip install check-manifest
+
+            - name: Check manifest
+              run: |
                 check-manifest -v
