--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -13,7 +13,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@master
+              uses: actions/checkout@v2
 
             - name: Build and Deploy
               uses: JacksonMaxfield/github-pages-deploy-action-python@master
@@ -29,7 +29,7 @@ jobs:
                       pip install .[docs]
                       export PATH=$HOME/.local/bin:$PATH
                       sphinx-apidoc -f -o docs/_modules/ ./TraceInv
-                      make -C docs/ html
+                      python setup.py build_sphinx
                       touch docs/_build/html/.nojekyll
                       echo 'Visit [Documentation](https://ameli.github.io/TraceInv/index.html).' > docs/_build/html/README.md
 
