--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -11,6 +11,7 @@ recursive-include docs *.py
 recursive-include docs *.rst
 recursive-include docs *.svg
 recursive-include docs Makefile
+recursive-include _modules *.rst
 recursive-exclude docs/images *.pdf
 
 recursive-include TraceInv *.rst
