--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -3,15 +3,96 @@ name: deploy-conda
 on:
     push:
         branches:
-            - main
-    release:
-        types: [published]
-    
+            - main2
+
 jobs:
-    publish:
+    build_wheels:
+        name: Build wheels on ${{ matrix.os }}
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                os: [ubuntu-18.04, windows-latest, macos-latest]
+                
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v2
+            
+            - name: Setup Python 
+              uses: actions/setup-python@v2
+              with:
+                  python-version: '3.7'
+
+            - name: Install cibuildwheel
+              run: |
+                  python -m pip install cibuildwheel==1.7.1
+            
+            - name: Install Visual C++ for Python 2.7
+              if: runner.os == 'Windows'
+              run: |
+                  choco install vcpython27 -f -y
+
+            - name: Install OpenMP for mac
+              if: runner.os == 'macos'
+              run: |
+                  brew install libomp
+
+                  # This is needed to import numpy in pypy (but not needed for CPython)
+                  pip cache remove numpy
+                  brew install openblas
+                  OPENBLAS="$(brew --prefix openblas)" pip install numpy
+            
+            - name: Build wheels
+              env:
+                  CIBW_SKIP: "*-win32 *-manylinux_i686 *-manylinux_aarch64 *-manylinux_ppc64le *-manylinux_s390x"
+              run: |
+                  python -m cibuildwheel --output-dir wheelhouse
+            
+            - uses: actions/upload-artifact@v2
+              with:
+                  path: ./wheelhouse/*.whl
+                  
+    build_sdist:
+        name: Build source distribution
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+
+            - name: Install Python
+              uses: actions/setup-python@v2
+              with:
+                  python-version: '3.7'
+            
+            - name: Build sdist
+              run: python setup.py sdist
+            
+            - uses: actions/upload-artifact@v2
+              with:
+                  path: dist/*.tar.gz
+
+    upload_pypi:
+        needs: [build_wheels, build_sdist]
         runs-on: ubuntu-latest
         name: Publish to Conda
+        
+        # upload to PyPI on every tag starting with 'v'
+        # if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
+        # alternatively, to publish when a GitHub Release is created, use the following rule:
+        # if: github.event_name == 'release' && github.event.action == 'published'
         steps:
+            - uses: actions/download-artifact@v2
+              with:
+                  name: artifact
+                  path: dist
+            
+            - uses: pypa/gh-action-pypi-publish@master
+              with:
+                  verbose: true
+                  user: __token__
+                  password: ${{ secrets.pypi_password }}
+
+
+
+
             - uses: actions/checkout@v2
             - name: publish-to-conda
               uses: fcakyon/conda-publish-action@v1.3
