--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -31,12 +31,19 @@ jobs:
               run: |
                   choco install vcpython27 -f -y
 
-            - name: Install OpenMP for mac
+            - name: Install OpenMP and numpy for mac
               if: runner.os == 'macos'
               run: |
                   brew install libomp
+
+                  # This is needed to import numpy in pypy (but not needed for CPython)
+                  pip cache remove numpy
+                  brew install openblas
+                  OPENBLAS="$(brew --prefix openblas)" pip install numpy
             
             - name: Build wheels
+              env:
+                  CIBW_SKIP: "*-win32 *-manylinux_i686 *-manylinux_aarch64 *-manylinux_ppc64le *-manylinux_s390x"
               run: |
                   python -m cibuildwheel --output-dir wheelhouse
             
@@ -65,6 +72,7 @@ jobs:
     upload_pypi:
         needs: [build_wheels, build_sdist]
         runs-on: ubuntu-latest
+        name: Publish to PyPi
         
         # upload to PyPI on every tag starting with 'v'
         # if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
@@ -76,7 +84,8 @@ jobs:
                   name: artifact
                   path: dist
             
-            - uses: pypa/gh-action-pypi-publish@master
-              with:
-                  user: __token__
-                  password: ${{ secrets.pypi_password }}
+            # - uses: pypa/gh-action-pypi-publish@master
+            #   with:
+            #       verbose: true
+            #       user: __token__
+            #       password: ${{ secrets.pypi_password }}
