--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -37,9 +37,9 @@ jobs:
                   brew install libomp
 
                   # This is needed to import numpy in pypy (but not needed for CPython)
-                  pip cache remove numpy
+                  # pip cache remove numpy
                   brew install openblas
-                  OPENBLAS="$(brew --prefix openblas)" pip install numpy
+                  # OPENBLAS="$(brew --prefix openblas)" python -m pip install numpy
             
             - name: Build wheels
               env:
