--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -37,9 +37,10 @@ jobs:
                   brew install libomp
 
                   # This is needed to import numpy in pypy (but not needed for CPython)
-                  # pip cache remove numpy
+                  pip cache remove numpy -qqq
                   brew install openblas
-                  # OPENBLAS="$(brew --prefix openblas)" python -m pip install numpy
+                  OPENBLAS="$(brew --prefix openblas)"
+                  python -m pip install numpy
             
             - name: Build wheels
               env:
@@ -84,8 +85,8 @@ jobs:
                   name: artifact
                   path: dist
             
-            # - uses: pypa/gh-action-pypi-publish@master
-            #   with:
-            #       verbose: true
-            #       user: __token__
-            #       password: ${{ secrets.pypi_password }}
+            - uses: pypa/gh-action-pypi-publish@master
+              with:
+                  verbose: true
+                  user: __token__
+                  password: ${{ secrets.pypi_password }}
