--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -37,7 +37,7 @@ jobs:
                   brew install libomp
 
                   # This is needed to import numpy in pypy (but not needed for CPython)
-                  pip cache remove numpy -qqq
+                  # pip cache remove numpy -qqq
                   brew install openblas
                   OPENBLAS="$(brew --prefix openblas)"
                   python -m pip install numpy
