--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -36,11 +36,11 @@ jobs:
               run: |
                   brew install libomp
 
-                  # This is needed to import numpy in pypy (but not needed for CPython)
+                  # This is needed to import numpy in pypy3 (but not needed for pypy2 and CPython)
                   # pip cache remove numpy -qqq
                   brew install openblas
                   OPENBLAS="$(brew --prefix openblas)"
-                  python -m pip install numpy
+                  python -m pip install numpy==1.18.0
             
             - name: Build wheels
               env:
