--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -40,7 +40,7 @@ jobs:
                   # pip cache remove numpy -qqq
                   brew install openblas
                   OPENBLAS="$(brew --prefix openblas)"
-                  python -m pip install numpy==1.18.0
+                  pip3 install numpy==1.18.0
             
             - name: Build wheels
               env:
