--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -10,6 +10,7 @@ jobs:
         name: Build wheels on ${{ matrix.os }}
         runs-on: ${{ matrix.os }}
         strategy:
+            fail-fast: false
             matrix:
                 os: [ubuntu-18.04, windows-latest, macos-latest]
                 
@@ -40,11 +41,11 @@ jobs:
                   # pip cache remove numpy -qqq
                   brew install openblas
                   OPENBLAS="$(brew --prefix openblas)"
-                  pip3 install numpy==1.18.0
+                  pip3 install numpy
             
             - name: Build wheels
               env:
-                  CIBW_SKIP: "*-win32 *-manylinux_i686 *-manylinux_aarch64 *-manylinux_ppc64le *-manylinux_s390x"
+                  CIBW_SKIP: "*-win32 *-manylinux_i686 *-manylinux_aarch64 *-manylinux_ppc64le *-manylinux_s390x pp3*-macosx*"
               run: |
                   python -m cibuildwheel --output-dir wheelhouse
             
@@ -80,13 +81,49 @@ jobs:
         # alternatively, to publish when a GitHub Release is created, use the following rule:
         # if: github.event_name == 'release' && github.event.action == 'published'
         steps:
-            - uses: actions/download-artifact@v2
+            - name: Download artifacts
+              uses: actions/download-artifact@v2
               with:
                   name: artifact
                   path: dist
             
-            - uses: pypa/gh-action-pypi-publish@master
+            - name: Upload to PyPi
+              uses: pypa/gh-action-pypi-publish@master
               with:
                   verbose: true
                   user: __token__
                   password: ${{ secrets.pypi_password }}
+
+    upload_conda:
+        needs: [build_wheels, build_sdist]
+        runs-on: ubuntu-latest
+        name: Publish to Anaconda
+        
+        # upload to PyPI on every tag starting with 'v'
+        # if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
+        # alternatively, to publish when a GitHub Release is created, use the following rule:
+        # if: github.event_name == 'release' && github.event.action == 'published'
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v1
+
+            - name: Download artifacts
+              uses: actions/download-artifact@v2
+              with:
+                  name: artifact
+                  path: dist
+
+            - name: Setup Python
+              uses: actions/setup-python@v2
+
+            - name: Install anaconda client
+              run: pip install anaconda-client
+            
+            - name: Upload artifacts
+              with:
+                  verbose: true
+                  anacondatoken: ${{ secrets.ANACONDA_TOKEN }}
+                  user: __token__
+                  password: ${{ secrets.pypi_password }}
+              run: |
+                  anaconda -t $ANACONDA_TOKEN upload --force -u $ANACONDA_ORG dist/artifact/*
