--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -27,6 +27,7 @@ requirements:
         - pip
         - pytest-runner
     run:
+        - openmp
         - python {{ python }}
         - suitesparse
         - numpy
